--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		<div class="row">
 			<div class="col-md-12">
 				<h2><u>Visualizations</u></h2>
-				<h3><a href="/raft">Raft: Understandable Distributed Consensus</a></h3>
+				<h3><a href="/raft">Raft: 理解分布式共识</a></h3>
 			</div>
 		</div>
 	</div>
